# m17-net-bot

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
samples/: adhoc_config.txt  advertisement.txt  lorem.txt  reflector_config.txt
src/: crc16.c  io.c  m17_bot.c  m17_c2v.c  m17_csd.c  m17_ipf.c  m17_lsf.c  m17_pkt.c  main.c  time.c  udp.c  utils.c
